[gd_scene load_steps=17 format=3 uid="uid://c35ses7btlwqk"]

[ext_resource type="Script" uid="uid://bk1ka6qbmryci" path="res://Scripts/Plants/PeaProjectile.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://chh8k80e2gdwn" path="res://Assets/Plants/WebBallwOutline.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bwcgujjm7p3jm" path="res://Assets/Plants/Animations/blueboom.png" id="3_r2e76"]

[sub_resource type="CircleShape2D" id="1"]

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3_r2e76")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3_r2e76")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3_r2e76")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3_r2e76")
region = Rect2(768, 0, 256, 256)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("3_r2e76")
region = Rect2(1024, 0, 256, 256)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3_r2e76")
region = Rect2(1280, 0, 256, 256)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3_r2e76")
region = Rect2(1536, 0, 256, 256)

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("3_r2e76")
region = Rect2(1792, 0, 256, 256)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("3_r2e76")
region = Rect2(2048, 0, 256, 256)

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource("3_r2e76")
region = Rect2(2304, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_frnp6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}, {
"duration": 1.0,
"texture": SubResource("10")
}],
"loop": true,
"name": &"default_1",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}, {
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": false,
"name": &"default_2",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("9")
}, {
"duration": 1.0,
"texture": SubResource("10")
}, {
"duration": 1.0,
"texture": SubResource("11")
}],
"loop": true,
"name": &"lightning",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r2e76"]
size = Vector2(76, 76)

[node name="PeaProjectile" type="Area2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource("1")
speed = 325
damage = 60
lightning_damage = 15

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Zombie"]]
shape = SubResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 1.0
offset_right = 41.0
offset_bottom = 40.0
color = Color(0.231373, 0.847059, 0.0823529, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
self_modulate = Color(0.882353, 0.0352941, 0.0352941, 1)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_frnp6")
animation = &"lightning"
autoplay = "lightning"

[node name="LightningZone" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightningZone"]
position = Vector2(-4, 4)
shape = SubResource("RectangleShape2D_r2e76")
disabled = true

[connection signal="area_entered" from="." to="." method="_on_PeaProjectile_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PeaProjectile_body_entered"]
[connection signal="area_entered" from="LightningZone" to="." method="_on_lightning_zone_area_entered"]
